--- a/trunk/Studie1/Studie1/App.xaml
+++ b/trunk/Studie1/Studie1/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Studie1.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Animated.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
