--- a/trunk/Studie1/Studie1/MainWindow.xaml
+++ b/trunk/Studie1/Studie1/MainWindow.xaml
@@ -1,8 +1,11 @@
 ﻿<Window x:Class="Studie1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
-        
+        <Button Content="Animated" Height="23" HorizontalAlignment="Left" Margin="376,70,0,0" Name="animated" VerticalAlignment="Top" Width="75" Click="animated_Click" />
+        <Button Content="Auditiv" Height="23" HorizontalAlignment="Left" Margin="376,128,0,0" Name="auditiv" VerticalAlignment="Top" Width="75" Click="auditiv_Click" />
+        <Button Content="Static" Height="23" HorizontalAlignment="Left" Margin="376,99,0,0" Name="static" VerticalAlignment="Top" Width="75" Click="static_Click" />
+        <Button Content="Avatar" Height="23" HorizontalAlignment="Left" Margin="376,157,0,0" Name="avatar" VerticalAlignment="Top" Width="75" Click="avatar_Click" />
     </Grid>
 </Window>
